Fixed blue links on iPhone/Safari

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,8 @@
 }
 
 a, a:visited, a:active, a:hover {
-  color: inherit;
+  color: inherit !important;
   text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-text-fill-color: inherit !important; /* iOS fix */
 }
